--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,20 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title>Ampos</title>
+    <title>AIA</title>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-TFLLWKD');</script>
+    <!-- End Google Tag Manager -->
+
+    Additionally, paste this code immediately after the opening <body> tag:
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TFLLWKD"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </head>
   <body>
     <div id="app">
