--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title>AIA</title>
+    <title>AIA #WhatsYourWhy</title>
+    <meta property="og:title" content="AIA WhatsYourWhy">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://campaigns.aia.co.th/whatsyourwhy/">
+    <meta property="og:image" content="/img/banner.png" img alt="แคมเปญสุขภาพ WhatsYourWhy ที่ AIA และ David Beckham แนะนำ">
+    <meta property="og:site_name" content="AIA WhatsYourWhy">
+    <meta property="og:description" content="เอไอเอ และ เดวิด เบ็คแฮมจะนำคุณเข้าสู่วิถีของการมีสุขภาพดี กับแคมเปญ WhatsYourWhy ที่ชวนคุณมาออกกำลังกาย ทานอาหารที่มีประโยชน์ เพื่อหาเหตุผลสำคัญที่คุณต้องดูแลตัวเอง">
+
+    <meta name="description" content=" เอไอเอ และ เดวิด เบ็คแฮมจะนำคุณเข้าสู่วิถีของการมีสุขภาพดี กับแคมเปญ WhatsYourWhy ที่ชวนคุณมาออกกำลังกาย ทานอาหารที่มีประโยชน์ เพื่อหาเหตุผลสำคัญที่คุณต้องดูแลตัวเอง" />
+    <meta name="keywords" content="เอไอเอ, เดวิด เบ็คแฮม, WhatsYourWhy" />
 
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
