--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="AIA WhatsYourWhy">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://campaigns.aia.co.th/whatsyourwhy/">
-    <meta property="og:image" content="../img/banner.png" img alt="แคมเปญสุขภาพ WhatsYourWhy ที่ AIA และ David Beckham แนะนำ">
+    <meta property="og:image" content="http://whatsyourwhy.herokuapp.com/img/banner.png" img alt="แคมเปญสุขภาพ WhatsYourWhy ที่ AIA และ David Beckham แนะนำ">
     <meta property="og:site_name" content="AIA WhatsYourWhy">
     <meta property="og:description" content="เอไอเอ และ เดวิด เบ็คแฮมจะนำคุณเข้าสู่วิถีของการมีสุขภาพดี กับแคมเปญ WhatsYourWhy ที่ชวนคุณมาออกกำลังกาย ทานอาหารที่มีประโยชน์ เพื่อหาเหตุผลสำคัญที่คุณต้องดูแลตัวเอง">
 
