--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta property="og:image" content="http://whatsyourwhy.herokuapp.com/img/banner.png" img alt="แคมเปญสุขภาพ WhatsYourWhy ที่ AIA และ David Beckham แนะนำ">
     <meta property="og:site_name" content="AIA WhatsYourWhy">
     <meta property="og:description" content="เอไอเอ และ เดวิด เบ็คแฮมจะนำคุณเข้าสู่วิถีของการมีสุขภาพดี กับแคมเปญ WhatsYourWhy ที่ชวนคุณมาออกกำลังกาย ทานอาหารที่มีประโยชน์ เพื่อหาเหตุผลสำคัญที่คุณต้องดูแลตัวเอง">
-
+    <meta property="fb:app_id" content="136353210315083">
     <meta name="description" content="เอไอเอ และ เดวิด เบ็คแฮมจะนำคุณเข้าสู่วิถีของการมีสุขภาพดี กับแคมเปญ WhatsYourWhy ที่ชวนคุณมาออกกำลังกาย ทานอาหารที่มีประโยชน์ เพื่อหาเหตุผลสำคัญที่คุณต้องดูแลตัวเอง" />
     <meta name="keywords" content="เอไอเอ, เดวิด เบ็คแฮม, WhatsYourWhy" />
 
