--- a/public/index.html
+++ b/public/index.html
@@ -52,4 +52,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
    }(document, 'script', 'facebook-jssdk'));
 </script>
   <script src="bundle.js"></script>
+  <script src="/script/html2canvas.js"></script>
+  <script src="/script/FileSaver.js"></script>
 </html>
