--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
     <title>AIA #WhatsYourWhy</title>
     <meta property="og:type" content="website">
     <meta property="og:title" content="AIA WhatsYourWhy">
-    <meta property="og:description" content="เอไอเอ และ เดวิด เบ็คแฮมจะนำคุณเข้าสู่วิถีของการมีสุขภาพดี กับแคมเปญ WhatsYourWhy ที่ชวนคุณมาออกกำลังกาย ทานอาหารที่มีประโยชน์ เพื่อหาเหตุผลสำคัญที่คุณต้องดูแลตัวเอง">
-    <meta property="og:url" content="http://whatsyourwhy.herokuapp.com/">
-    <meta property="og:image" content="http://whatsyourwhy.herokuapp.com/img/banner.png">
+    <meta property="og:description" content="เอไอเอ และ เดวิด เบ็คแฮมจะนำคุณเข้าสู่วิถีของการมีสุขภาพดี กับแคมเปญ&nbsp;WhatsYourWhy&nbsp;ที่ชวนคุณมาออกกำลังกาย ทานอาหารที่มีประโยชน์ เพื่อหาเหตุผลสำคัญที่คุณต้องดูแลตัวเอง">
+    <meta property="og:url" content="http://campaigns.aia.co.th/whatsyourwhy">
+    <meta property="og:image" content="http://campaigns.aia.co.th/whatsyourwhy/img/banner.png">
     <meta property="fb:app_id" content="136353210315083">
 
-    <meta name="description" content="เอไอเอ และ เดวิด เบ็คแฮมจะนำคุณเข้าสู่วิถีของการมีสุขภาพดี กับแคมเปญ WhatsYourWhy ที่ชวนคุณมาออกกำลังกาย ทานอาหารที่มีประโยชน์ เพื่อหาเหตุผลสำคัญที่คุณต้องดูแลตัวเอง" />
-    <meta name="keywords" content="เอไอเอ, เดวิด เบ็คแฮม, WhatsYourWhy" />
+    <meta name="description" content="เอไอเอ และ เดวิด เบ็คแฮมจะนำคุณเข้าสู่วิถีของการมีสุขภาพดี กับแคมเปญ&nbsp;WhatsYourWhy&nbsp;ที่ชวนคุณมาออกกำลังกาย ทานอาหารที่มีประโยชน์ เพื่อหาเหตุผลสำคัญที่คุณต้องดูแลตัวเอง">
+    <meta name="keywords" content="เอไอเอ, เดวิด เบ็คแฮม, WhatsYourWhy">
 
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
