--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-5KBX8FT');</script>
 <!-- End Google Tag Manager -->
 
-<!-- <script src="//assets.adobedtm.com/90c58d4aa8a1b33beefab4bf8138774c1a1a4147/satelliteLib-031988b52ed5fc05a57ea1782de12adca3040672.js"></script>
 <script src="//assets.adobedtm.com/90c58d4aa8a1b33beefab4bf8138774c1a1a4147/satelliteLib-031988b52ed5fc05a57ea1782de12adca3040672.js"></script>
-<script type="text/javascript">_satellite.pageBottom();</script> -->
+<script src="//assets.adobedtm.com/90c58d4aa8a1b33beefab4bf8138774c1a1a4147/satelliteLib-031988b52ed5fc05a57ea1782de12adca3040672.js"></script>
+<script type="text/javascript">_satellite.pageBottom();</script>
 
   </head>
   <body>
